# L-System-Visualizer

./: CMakeLists.txt  README.md  main.cpp
Assets/SampleProject/: README.txt  bark.mtl  branch.mtl  sampleTree.L_Vis
Docs/User Guide/: User Guide - L-System_Visualizer.docx
GUI/: MainWindow.cpp  MainWindow.h  mainwindow.ui
GUI/Dialogs/: NewNameDialog.cpp  NewNameDialog.h  SaveResultNameDialog.cpp  SaveResultNameDialog.h  newNameDialog.ui  saveResultNameDialog.ui
GUI/L_System/: ScriptInfoTabWidget.cpp  ScriptInfoTabWidget.h  ScriptTabWidget.cpp  ScriptTabWidget.h  ScriptTabs.cpp  ScriptTabs.h  scriptTabWidget.ui
GUI/L_System/Axiom/: AxiomTabContent.cpp  AxiomTabContent.h  axiomTabContent.ui
GUI/L_System/Constants/: ConstantEntryDeclaration.cpp  ConstantEntryDeclaration.h  ConstantEntryInformation.cpp  ConstantEntryInformation.h  ConstantTabContent.cpp  ConstantTabContent.h  ConstantsWidget.cpp  ConstantsWidget.h  constantEntryDeclaration.ui  constantEntryInformation.ui  constantTabContent.ui
GUI/L_System/Rules/: RuleEntry.cpp  RuleEntry.h  RuleInformation.h  RuleTabContent.cpp  RuleTabContent.h  RuleWidget.cpp  RuleWidget.h  ruleEntry.ui  ruleTabContent.ui
GUI/L_System/Variables/: VariableEntry.cpp  VariableEntry.h  VariableTabContent.cpp  VariableTabContent.h  VariablesWidget.cpp  VariablesWidget.h  variableEntry.ui  variableTabContent.ui
GUI/OpenGL/: GLWidget.cpp  GLWidget.h  RenderResultWidget.cpp  RenderResultWidget.h  renderResultWidget.ui
GUI/Output/L_System/: ScriptOutputEntry.cpp  ScriptOutputEntry.h  ScriptOutputWidget.cpp  ScriptOutputWidget.h  scriptOutputEntry.ui
HelperFunctions/: RuleLoading.cpp  RuleLoading.h
L_System/: ScriptInput.cpp  ScriptInput.h
L_System/DataStructures/: Axiom.h  Constant.h  Rotation.h  Translation.h  Variable.h
L_System/DataStructures/Constants/: Constant.cpp  Constant.h  Rotation.cpp  Rotation.h  StackOperation.h  Translation.cpp  Translation.h
L_System/DataStructures/Rules/: Rule.cpp  Rule.h  SuccessToken.cpp  SuccessorToken.h
L_System/DataStructures/Variable/: Variable.cpp  Variable.h
L_System/Execution/: Executor.cpp  Executor.h  NoMatchError.h  Token.cpp  Token.h
L_System/Interpretation/: Interpreter.cpp  Interpreter.h  ModelInstancePlacement.h  UnbalancedError.h  UnderflowError.h
L_System/LexerParser/: Lexer.cpp  Lexer.h  Token.h
ModelLoading/: Face.cpp  Face.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
ProjectSaverLoader/: FavouriteResult.h  ProjectDetails.cpp  ProjectDetails.h  ProjectExporter.cpp  ProjectExporter.h  ProjectLoader.cpp  ProjectLoader.h  ProjectSaver.cpp  ProjectSaver.h  ScriptInformation.h  UserDefinedInstances.h
Render/: CommandCentre.cpp  CommandCentre.h
Render/Camera/: CameraMovement.h  CameraObject.cpp  CameraObject.h
Render/DataStructures/: ModelRange.cpp  ModelRange.h  RecursionModelRange.cpp  RecursionModelRange.h  RecursionTree.cpp  RecursionTree.h  RemoveModelRecursionResult.h  StoredModels.cpp  StoredModels.h  TransformationData.h  TransformationIdentifier.h  UserAddedModelInstances.h
Render/GridSystem/: AxisVAO.h  GridVAO.cpp  GridVAO.h
Render/Shaders/: ShaderManager.cpp  ShaderManager.h
Render/Shaders/GridSystem/: fragmentShader.txt  vertexShader.txt
Render/Shaders/UserModels/: fragmentShader.txt  vertexShader.txt
Render/Textures/: CompressFactor.h  TextureBank.cpp  TextureBank.h  TextureID.h  TextureManager.cpp  TextureManager.h
Render/VAO/GridSystem/: AxisVAO.cpp  AxisVAO.h  GridVAO.h
Render/VAO/UserModels/: ModelVAO.cpp  ModelVAO.h
Render/VBO/: VBOWapper.h
Tests/: TestSuite.cpp  TestSuite.h
Tests/L_System/: TestExecutor.cpp  TestExecutor.h  TestInterpreter.cpp  TestInterpreter.h
Tests/ProjectSaverLoader/: TestBasicSaveLoad.cpp  TestBasicSaveLoad.h  TestProjectSaveLoad.cpp  TestProjectSaveLoad.h
Tests/Render/: TestStoredModels.cpp  TestStoredModels.h
